--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,13 +2,54 @@ unbind r
 
 bind r source-file ~/.tmux.conf
 
-set -g prefix C-space
+unbind-key C-b
+set -g prefix C-a
+bind-key C-a send-prefix
 
-set -g mode-keys vi
+set -sg escape-time 50
+set -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ',xterm-256color:Tc,*:Ss=\E[%p1%d q:Se=\E[2 q:Ms=\\E]52;c;%p2%s\\7'
+set-option -g status-position top
+set -g mouse on
+set-option -s set-clipboard off
+
+setw -g mode-keys vi
+unbind-key -T copy-mode-vi v
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind P paste-buffer
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind H resize-pane -L
+bind J resize-pane -D
+bind K resize-pane -U
+bind L resize-pane -R
+
+bind -n M-H resize-pane -L
+bind -n M-J resize-pane -D
+bind -n M-K resize-pane -U
+bind -n M-L resize-pane -R
+
+bind P swap-window -t :-
+bind N swap-window -t :+
+
+bind-key t next-window
+bind-key T previous-window
+
+setw -g aggressive-resize on
+
+
 
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "christoomey/vim-tmux-navigator"
@@ -45,8 +86,6 @@ tmux_violet="#fa53d7"
 set -g @catppuccin_pane_border_style "fg=$tmux_orange"
 set -g @catppuccin_pane_active_border_style "fg=$tmux_violet"
 
-set-option -g status-position top
-set -g mouse on
 
 run "~/.tmux/plugins/tpm/tpm"
 
