--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,15 @@
 [submodule ".omz-custom/themes/powerlevel10k"]
 	path = .omz-custom/themes/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k.git
+[submodule ".omz-custom/plugins/zsh-history-substring-search"]
+	path = .omz-custom/plugins/zsh-history-substring-search
+	url = https://github.com/zsh-users/zsh-history-substring-search
+[submodule ".omz-custom/plugins/zsh-completions"]
+	path = .omz-custom/plugins/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions
+[submodule ".omz-custom/plugins/zsh-autosuggestions"]
+	path = .omz-custom/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule ".omz-custom/plugins/zsh-syntax-highlighting"]
+	path = .omz-custom/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
