just read the file diff
i just did a bunch of stuff related to nvim, tmux-conf, btop,
nvim-plugins etc... to much for me to write

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,6 @@
 	path = .config/spicetify/CustomApps/eternal-jukebox
 	url = https://github.com/Pithaya/spicetify-apps-dist
 	branch = dist/eternal-jukebox
+[submodule ".tmux/plugins/tmux-sensible"]
+	path = .tmux/plugins/tmux-sensible
+	url = https://github.com/tmux-plugins/tmux-sensible
