--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,20 @@
-unbind r
-
-bind r source-file ~/.tmux.conf
-
 unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
 
+set -g base-index 1
+set -g pane-base-index 1
+set -g focus-events on
+setw -g pane-base-index 1
+set -g renumber-windows on
+set-option -g detach-on-destroy off
+
 set -sg escape-time 50
-set -g default-terminal 'tmux-256color'
-set -ga terminal-overrides ',xterm-256color:Tc,*:Ss=\E[%p1%d q:Se=\E[2 q:Ms=\\E]52;c;%p2%s\\7'
+set-option -g default-terminal 'screen-256color'
+set -ga terminal-overrides ',screen-256color:Tc,*:Ss=\E[%p1%d q:Se=\E[2 q:Ms=\\E]52;c;%p2%s\\7'
 set-option -g status-position top
 set -g mouse on
-set-option -s set-clipboard off
+set -s set-clipboard off
 
 setw -g mode-keys vi
 unbind-key -T copy-mode-vi v
@@ -20,6 +23,13 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 bind P paste-buffer
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+bind-key   @ choose-window 'join-pane -h -s "%%"'
+bind-key C-@ choose-window 'join-pane    -s "%%"'
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -41,6 +51,9 @@ bind -n M-J resize-pane -D
 bind -n M-K resize-pane -U
 bind -n M-L resize-pane -R
 
+bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
+bind-key -r i run-shell "tmux neww tmux-cht.sh"
+
 bind P swap-window -t :-
 bind N swap-window -t :+
 
@@ -49,9 +62,8 @@ bind-key T previous-window
 
 setw -g aggressive-resize on
 
-
-
 set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "catppuccin/tmux"
 
@@ -69,9 +81,6 @@ set -g @catppuccin_window_default_text "#W"
 
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "yes"
 
 set -g @catppuccin_status_modules_right "session directory"
 set -g @catppuccin_status_left_separator  ""
