--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -9,7 +9,7 @@ inject_css             = 1
 replace_colors         = 1
 spotify_launch_flags   = 
 check_spicetify_update = 1
-spotify_path           = /opt/spotify/
+spotify_path           = /usr/share/spotify/
 
 [Preprocesses]
 disable_sentry     = 1
