--- a/.config/mc/panels.ini
+++ b/.config/mc/panels.ini
@@ -12,6 +12,7 @@ user_status1=half type name | size | perm
 user_status2=half type name | size | perm
 user_status3=half type name | size | perm
 user_mini_status=false
+filter_flags=7
 list_format=full
 
 [New Right Panel]
@@ -28,6 +29,7 @@ user_status1=half type name | size | perm
 user_status2=half type name | size | perm
 user_status3=half type name | size | perm
 user_mini_status=false
+filter_flags=7
 list_format=full
 
 [Dirs]
