--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -7,9 +7,9 @@ current_theme          = catppuccin
 color_scheme           = mocha
 inject_css             = 1
 replace_colors         = 1
-spotify_launch_flags   = 
+spotify_launch_flags   =
 check_spicetify_update = 1
-spotify_path           = /usr/share/spotify/
+spotify_path           = /opt/spotify/
 
 [Preprocesses]
 disable_sentry     = 1
@@ -18,7 +18,7 @@ remove_rtl_rule    = 1
 expose_apis        = 1
 
 [AdditionalOptions]
-custom_apps           = lyrics-plus|marketplace|ncs-visualizer|eternal-jukebox
+custom_apps           = lyrics-plus|marketplace|ncs-visualizer
 sidebar_config        = 0
 home_config           = 0
 experimental_features = 0
@@ -29,4 +29,4 @@ extensions            = keyboardShortcut.js|popupLyrics.js
 ; DO NOT CHANGE!
 [Backup]
 version = 1.2.31.1205.g4d59ad7c
-with    = 2.36.2
+with    = 2.36.3
