removing some unnecessary plugins and adding some more

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -18,7 +18,7 @@ remove_rtl_rule    = 1
 expose_apis        = 1
 
 [AdditionalOptions]
-custom_apps           = lyrics-plus|marketplace|ncs-visualizer
+custom_apps           = lyrics-plus|ncs-visualizer
 sidebar_config        = 0
 home_config           = 0
 experimental_features = 0
