--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,100 +1,72 @@
+source-file ~/.tmux.reset.conf
+
+set-option -g default-terminal 'screen-256color'
+set-option -g terminal-overrides ',screen-256color:RGB:Tc,*:Ss=\E[%p1%d q:Se=\E[2 q:Ms=\\E]52;c;%p2%s\\7'
+
 unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
 
 set -g base-index 1
 set -g pane-base-index 1
-set -g focus-events on
-setw -g pane-base-index 1
+set -g detach-on-destroy off
+set -g escape-time 50
+set -g history-limit 10000
 set -g renumber-windows on
-set-option -g detach-on-destroy off
-
-set -sg escape-time 50
-set-option -g default-terminal 'screen-256color'
-set -ga terminal-overrides ',screen-256color:Tc,*:Ss=\E[%p1%d q:Se=\E[2 q:Ms=\\E]52;c;%p2%s\\7'
-set-option -g status-position top
-set -g mouse on
-set -s set-clipboard off
-
+set -g set-clipboard on
+set -g status-position top
+set -g focus-events on
+set -g default-terminal "${TERM}"
 setw -g mode-keys vi
-unbind-key -T copy-mode-vi v
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
-bind P paste-buffer
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
-
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-bind-key   @ choose-window 'join-pane -h -s "%%"'
-bind-key C-@ choose-window 'join-pane    -s "%%"'
-
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
-bind H resize-pane -L
-bind J resize-pane -D
-bind K resize-pane -U
-bind L resize-pane -R
-
-bind -n M-H resize-pane -L
-bind -n M-J resize-pane -D
-bind -n M-K resize-pane -U
-bind -n M-L resize-pane -R
-
-bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
-
-bind P swap-window -t :-
-bind N swap-window -t :+
-
-bind-key t next-window
-bind-key T previous-window
-
+set -g mouse on
 setw -g aggressive-resize on
+
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
 
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "catppuccin/tmux"
+set -g @plugin "omerxx/tmux-sessionx"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
+set -g @sessionx-bind 'o'
+set -g @sessionx-x-path '~/.dotfiles'
+set -g @sessionx-custom-path '~/code'
+set -g @sessionx-window-height '85%'
+set -g @sessionx-window-width '75%'
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-filter-current 'false'
+set -g @sessionx-preview-enabled 'true'
+
+set -g @continuum-restore 'on'
+
+set -g @resurrect-strategy-nvim 'session'
 
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
-
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator "█ "
-
-set -g @catppuccin_window_number_position "left"
-
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
-
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 set -g @catppuccin_status_modules_right "session directory"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "yes"
-
 set -g @catppuccin_directory_text "#{pane_current_path}"
-
 tmux_orange="#fab387"
 tmux_violet="#fa53d7"
 set -g @catppuccin_pane_border_style "fg=$tmux_orange"
 set -g @catppuccin_pane_active_border_style "fg=$tmux_violet"
-
 
 run "~/.tmux/plugins/tpm/tpm"
 
