we want new window in tmux

--- a/.tmux.reset.conf
+++ b/.tmux.reset.conf
@@ -16,6 +16,7 @@ bind l refresh-client
 bind | split-window
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 bind '"' choose-window
 bind -r -T prefix , resize-pane -L 20
 bind -r -T prefix . resize-pane -R 20
@@ -23,7 +24,7 @@ bind -r -T prefix - resize-pane -D 7
 bind -r -T prefix = resize-pane -U 7
 bind : command-prompt
 bind * setw synchronize-panes
-bind c kill-pane
+bind C kill-pane
 bind x swap-pane -D
 bind S choose-session
 
