vim lsp format is a nightmare

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -7,7 +7,7 @@ current_theme          = catppuccin
 color_scheme           = mocha
 inject_css             = 1
 replace_colors         = 1
-spotify_launch_flags   =
+spotify_launch_flags   = 
 check_spicetify_update = 1
 spotify_path           = /opt/spotify/
 
@@ -22,11 +22,11 @@ custom_apps           = lyrics-plus|ncs-visualizer
 sidebar_config        = 0
 home_config           = 0
 experimental_features = 0
-extensions            = keyboardShortcut.js|popupLyrics.js
+extensions            = keyboardShortcut.js
 
 [Patch]
 
 ; DO NOT CHANGE!
 [Backup]
 version = 1.2.31.1205.g4d59ad7c
-with    = 2.36.3
+with    = 2.36.10
