i have no idea what's going on

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ extensions            = keyboardShortcut.js
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.31.1205.g4d59ad7c
-with    = 2.36.10
+version = 1.2.37.701.ge66eb7bc
+with    = 2.36.11
