--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -22,11 +22,11 @@ custom_apps           = lyrics-plus|ncs-visualizer
 sidebar_config        = 0
 home_config           = 0
 experimental_features = 0
-extensions            = keyboardShortcut.js
+extensions            = keyboardShortcut.js|adblock.js
 
 [Patch]
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.37.701.ge66eb7bc
-with    = 2.36.11
+version = 1.2.40.599.g606b7f29
+with    = 2.36.13
