added catppuccin everywhere like a maniac

--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -22,11 +22,11 @@ custom_apps           = lyrics-plus|ncs-visualizer
 sidebar_config        = 0
 home_config           = 0
 experimental_features = 0
-extensions            = keyboardShortcut.js|adblock.js
+extensions            = keyboardShortcut.js
 
 [Patch]
 
 ; DO NOT CHANGE!
 [Backup]
 version = 1.2.42.290.g242057a2
-with    = 2.36.15
+with    = 2.37.4
