--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set -g @sessionx-zoxide-mode 'on'
 set -g @sessionx-filter-current 'false'
 set -g @sessionx-preview-enabled 'true'
 
-set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
