--- a/.config/BetterDiscord/data/stable/settings.json
+++ b/.config/BetterDiscord/data/stable/settings.json
@@ -19,7 +19,7 @@
         "minimap": true,
         "hover": true,
         "quickSuggestions": true,
-        "fontSize": 14,
+        "fontSize": "18",
         "renderWhitespace": "selection"
     },
     "window": {
