--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 
 [window]
 opacity = 0.85
@@ -42,3 +41,6 @@ history = 20000
 
 [selection]
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
+
+[general]
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
