--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ extensions            = keyboardShortcut.js
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.42.290.g242057a2
-with    = 2.37.4
+version = 1.2.48.405.gf2c48e6f
+with    = 2.38.4
